fix the white space using padding

--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -29,6 +29,7 @@ div .summary, div .preamble{
     margin-left: 1rem;
     margin-right: 1rem;
     background-color: #C4EC76;
+    padding: 50px;
 }
 
 div .summary{
